--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "sequelize": "^6.37.1"
   },
   "devDependencies": {
+    "nodemon": "^3.1.0",
     "sequelize-cli": "^6.6.2"
   }
 }
