--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "exsvel",
   "version": "1.0.0",
-  "description": "",
+  "description": "Starter Framework for ExpressJS and Svelte",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
-  "author": "",
+  "author": "Herlangga Sefani [Github](https://github.com/gaibz)",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "moment": "^2.30.1",
     "mysql2": "^3.9.1",
     "sequelize": "^6.37.1"
   },
