--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Starter Framework for ExpressJS and Svelte",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose ./tests",
     "start": "nodemon server.js"
   },
   "author": "Herlangga Sefani [Github](https://github.com/gaibz)",
@@ -12,11 +12,14 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mysql2": "^3.9.1",
     "sequelize": "^6.37.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "sequelize-cli": "^6.6.2"
   }
